--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 <body>
 	<div id="vue-app">
 		<h1>HELLO WORLD</h1>
+		<h1 v-if="show">{{greet("Afternoon")}}</h1>
 		<h2>I am {{name}}</h2>
+		<a v-bind:href="website">MY WEBSITE</a>
+		<input type="text" v-bind:value="name">
 		<p>AND, This is my first vue app</p>
+		<p>AGE : {{age}}</p>
+		<button v-on:click="increase" >Increase</button>
+		<button v-on:click="decrease" >Deacrease</button>
 	</div>
 	<script type="text/javascript" src="./app.js"></script>
 </body>
